# Meshine-Shop

./: .gitignore  CASE_STUDY.md  README.md
desktop/: pyproject.toml
desktop/apple_photogrammetry/: Package.swift
desktop/apple_photogrammetry/.build/: build.db  debug.yaml
desktop/apple_photogrammetry/.build/arm64-apple-macosx/debug/: apple-photogrammetry  description.json
desktop/apple_photogrammetry/.build/arm64-apple-macosx/debug/ModuleCache/: CoreMotion-18JOJV9LR8E9M.swiftmodule  GroupActivities-1XWQGVD24HPVI.swiftmodule  RealityFoundation-3FQ41K7F6XCV5.swiftmodule  RealityKit-3HL5MSKEDJTUN.swiftmodule
desktop/apple_photogrammetry/.build/arm64-apple-macosx/debug/Modules/: apple_photogrammetry.swiftdoc  apple_photogrammetry.swiftmodule  apple_photogrammetry.swiftsourceinfo
desktop/apple_photogrammetry/.build/arm64-apple-macosx/debug/apple-photogrammetry.product/: Objects.LinkFileList
desktop/apple_photogrammetry/.build/arm64-apple-macosx/debug/apple_photogrammetry.build/: apple_photogrammetry.emit-module.d  main.d  (+4 more)
desktop/apple_photogrammetry/Sources/: main.swift
desktop/meshine_shop/: __init__.py  __main__.py  app.py
desktop/meshine_shop/core/: ai_texture_baker.py  ai_texture_gen.py  apple_engine.py  edit_history.py  engine.py  engine_factory.py  exporter.py  mesh_painter.py  mesh_segmentation.py  pipeline.py  texture_baker.py  viewport_camera.py  worker.py  workspace.py
desktop/meshine_shop/ui/: drop_zone.py  main_window.py  processing_queue.py  sidebar.py  styles.py  viewport.py  viewport_layers.py  viewport_tools.py
desktop/scripts/: dev.py
(+282 files in other folders)
