[tool.poetry]
name = "meshine-shop"
version = "0.1.0"
description = "Photogrammetry-to-game-asset pipeline"
authors = ["Lux Henderson"]
package-mode = true
packages = [{include = "meshine_shop"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PySide6 = "^6.7"
pycolmap = "^3.13"
pillow-heif = "^1.2.0"
pillow = "^12.1.1"
open3d = "^0.19.0"
trimesh = "^4.11.2"
pycollada = "^0.9.3"
usd-core = "^25.11"

[tool.poetry.group.dev.dependencies]
watchfiles = "^1.0"

[tool.poetry.scripts]
meshine = "meshine_shop.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
